--- a/tourist-web/src/main/webapp/view/supplier/goodsDetailsH+.html
+++ b/tourist-web/src/main/webapp/view/supplier/goodsDetailsH+.html
@@ -30,7 +30,12 @@
     <link href="http://resali.huobanplus.com/cdn/hotui/css/style.min-1.0.2.css" rel="stylesheet"/>
 
 </head>
-
+<!--/*@thymesVar id="typeName" type="com.huotu.tourist.entity.TouristType"*/-->
+<!--/*@thymesVar id="good" type="com.huotu.tourist.entity.TouristGood"*/-->
+<!--/*@thymesVar id="touristTypes" type="java.util.ArrayList<com.huotu.tourist.entity.TouristType>"*/-->
+<!--/*@thymesVar id="activityTypes" type="java.util.ArrayList<com.huotu.tourist.entity.ActivityType>"*/-->
+<!--/*@thymesVar id="routes" type="java.util.ArrayList<com.huotu.tourist.model.TouristRouteModel>"*/-->
+<!--/*@thymesVar id="checkStates" type="com.huotu.tourist.common.TouristCheckStateEnum[]"*/-->
 <body class="gray-bg">
 <div class="wrapper wrapper-content">
     <div class="row">
@@ -56,12 +61,15 @@
                         <div class="tab-content">
                             <div id="tab-1" class="tab-pane active">
                                 <div class="wrapper-content">
-                                    <form  class="form-horizontal">
+
+                                    <form  class="form-horizontal" th:object="${good}">
+                                        <input name="id" th:value="*{id}" type="hidden"/>
                                         <div class="form-group">
                                             <label class="col-sm-1 control-label">名称：</label>
 
                                             <div class="col-sm-4">
-                                                <input name="title" th:value="*{title}" type="text" class="form-control"/>
+                                                <input name="touristName" th:value="*{touristName}" type="text"
+                                                       class="form-control"/>
                                             </div>
                                         </div>
 
@@ -71,13 +79,13 @@
                                             <div class="col-sm-10">
                                                 <div class="col-md-2">
                                                     <div class="image-crop">
-                                                        <img id="pictureUrl" style="width: 150px;height: 100px"  th:src="*{pictureUrl}==null?'/img/300x200.png':*{pictureUrl}"
+                                                        <img id="pictureUrl" style="width: 150px;height: 100px"  th:src="*{touristImgUri}"
                                                              src="/img/300x200.png"/>
                                                     </div>
                                                 </div>
                                                 <div class="col-md-3">
-                                                    <label title="上传图片" for="fileImage" class="btn btn-primary">
-                                                        <input onchange=" messageConfig.uploadImage()" type="file" accept="image/*"  id="fileImage" name="fileImage" class="hide"/> 上传新图片
+                                                    <label title="上传图片" for="fileImage" class="btn btn-success">
+                                                        <input onchange="uploadImage()" type="file" accept="image/*"  id="fileImage" name="fileImage" class="hide"/> 上传新图片
                                                     </label>
                                                     <span class="help-block m-b-none">推荐图片大小:300x200</span>
                                                 </div>
@@ -88,9 +96,13 @@
                                             <label class="col-sm-1 control-label">活动类型：</label>
 
                                             <div class="col-sm-1">
-                                                <select class="form-control">
-                                                    <option>短途游</option>
-                                                    <option>长途游</option>
+
+                                                <select name="touristType" th:each="t:${touristTypes}" class="form-control">
+
+                                                    <option value="3" th:checked="*{touristType.id}==${t.id}"
+                                                            th:value="${t.id}"
+                                                            th:text="${t.typeName}">短途游
+                                                    </option>
                                                 </select>
                                             </div>
                                         </div>
@@ -98,9 +110,11 @@
                                             <label class="col-sm-1 control-label">线路类型：</label>
 
                                             <div class="col-sm-1">
-                                                <select class="form-control">
-                                                    <option>跳伞</option>
-                                                    <option>蹦极</option>
+
+                                                <select name="activityType" th:each="a:${activityTypes}" class="form-control">
+                                                    <option value="2" th:checked="*{activityType.id}==${a.id}"
+                                                            th:value="${a.id}"
+                                                            th:text="${a.activityName}">跳伞
                                                 </select>
                                             </div>
                                         </div>
@@ -108,7 +122,7 @@
                                             <label class="col-sm-1 control-label">线路特色：</label>
 
                                             <div class="col-sm-10">
-                                                <input placeholder="线路特色" name="title" th:value="*{title}"
+                                                <input placeholder="线路特色" name="touristFeatures" th:value="*{touristFeatures}"
                                                        type="text" class="form-control"/>
                                             </div>
                                         </div>
@@ -118,7 +132,7 @@
 
                                             <div class="col-sm-3">
                                                 <input placeholder="请选择目的地" data-toggle="city-picker"
-                                                       name="placeOfDeparture" th:value="*{placeOfDeparture}"
+                                                       name="destination" th:value="*{destination}"
                                                        type="text" class="form-control"/>
                                             </div>
                                         </div>
@@ -136,7 +150,7 @@
 
                                             <div class="col-sm-3">
                                                 <input placeholder="请选择途径地" data-toggle="city-picker"
-                                                       name="placeOfDeparture" th:value="*{placeOfDeparture}"
+                                                       name="travelledAddress" th:value="*{travelledAddress}"
                                                        type="text" class="form-control"/>
                                             </div>
                                         </div>
@@ -149,7 +163,7 @@
                                                        class="form-control"/>
                                                 <span class="text-left">成人</span>
 
-                                                <input name="childrenDiscount" th:value="*{childrenDiscount}" type="text"
+                                                    <input name="childrenDiscount" th:value="*{childrenDiscount}" type="text"
                                                        class="form-control"/>
 
                                                 <span class="text-left">儿童</span>
@@ -179,7 +193,7 @@
                                             <label class="col-sm-1 control-label">地接人：</label>
 
                                             <div class="col-sm-2">
-                                                <input name="travelledAddress" th:value="*{travelledAddress}" type="text"
+                                                <input name="receptionPerson" th:value="*{receptionPerson}" type="text"
                                                        class="form-control"/>
                                             </div>
                                         </div>
@@ -188,7 +202,7 @@
                                             <label class="col-sm-1 control-label">联系电话：</label>
 
                                             <div class="col-sm-2">
-                                                <input name="travelledAddress" th:value="*{travelledAddress}" type="text"
+                                                <input name="receptionTelephone" th:value="*{receptionTelephone}" type="text"
                                                        class="form-control"/>
                                             </div>
                                         </div>
@@ -197,7 +211,7 @@
                                             <label class="col-sm-1 control-label">人数：</label>
 
                                             <div class="col-sm-1">
-                                                <input name="travelledAddress" th:value="*{travelledAddress}" type="text"
+                                                <input name="maxPeople" th:value="*{maxPeople}" type="text"
                                                        class="form-control"/>
                                             </div>
                                         </div>
@@ -213,14 +227,16 @@
                                         </div>
                                         <div class="hr-line-dashed"></div>
 
-                                        <div id="goodsTouristDates" class="form-group">
+
+                                        <div th:each="r:${routes}" id="goodsTouristDates" class="form-group form-inline">
 
                                             <div class="col-sm-2">
-                                                <span style="display: none">1</span>
-                                                <input name="toursitDate" th:value="*{}" type="text"
-                                                       class="form-control"/>
-                                            </div>
 
+                                                <input name="toursitDate" th:value="${r.fromDate}" type="text"
+                                                       class="form-control"/>
+                                                <span th:if="${r.sold}">已售出</span>
+                                                <span th:text="${r.id}" style="display: none">1</span>
+                                            </div>
 
                                         </div>
 
@@ -229,12 +245,12 @@
                             </div>
                             <div id="tab-2" class="tab-pane">
                                 <div class="wrapper-content">
-                                    <form method="post" class="form-horizontal">
+                                    <form th:object="${good}" method="post" class="form-horizontal">
                                         <div class="form-group">
                                             <label class="col-sm-1 control-label">活动详情</label>
 
                                             <div class="col-sm-10">
-                                                <div class="summernote">
+                                                <div id="eventDetails" th:utext="*{eventDetails}" class="summernote">
                                                     <h2>H+ 后台主题</h2>
                                                     <p>H+是一个完全响应式，基于Bootstrap3.3.5最新版本开发的扁平化主题，她采用了主流的左右两栏式布局，使用了Html5+CSS3等现代技术，她提供了诸多的强大的可以重新组合的UI组件，并集成了最新的jQuery版本(v2.1.1)，当然，也集成了很多功能强大，用途广泛的就jQuery插件，她可以用于所有的Web应用程序，如<b>网站管理后台</b>，<b>网站会员中心</b>，<b>CMS</b>，<b>CRM</b>，<b>OA</b>等等，当然，您也可以对她进行深度定制，以做出更强系统。</p>
                                                     <p>
@@ -252,7 +268,7 @@
                                             <label class="col-sm-1 control-label">注意事项</label>
 
                                             <div class="col-sm-10">
-                                                <div class="summernote">
+                                                <div id="beCareful" th:utext="*{beCareful}" class="summernote">
                                                     <h2>H+ 后台主题</h2>
                                                     <p>H+是一个完全响应式，基于Bootstrap3.3.5最新版本开发的扁平化主题，她采用了主流的左右两栏式布局，使用了Html5+CSS3等现代技术，她提供了诸多的强大的可以重新组合的UI组件，并集成了最新的jQuery版本(v2.1.1)，当然，也集成了很多功能强大，用途广泛的就jQuery插件，她可以用于所有的Web应用程序，如<b>网站管理后台</b>，<b>网站会员中心</b>，<b>CMS</b>，<b>CRM</b>，<b>OA</b>等等，当然，您也可以对她进行深度定制，以做出更强系统。</p>
                                                     <p>
@@ -273,10 +289,13 @@
                     </div>
                     <div class="hr-line-dashed"></div>
                     <div class="form-group">
-                        <p class="text-center">
-                            <button class="btn btn-success" type="button">保存</button>
-                            <button class="btn btn-success" type="button">保存并提交审核</button>
-                            <button class="btn btn-success" type="button">回收</button>
+                        <p class="text-center" th:each="c:${checkStates}">
+                            <button onclick="submitForm(1,this)" th:value="${c.value}"
+                                    th:onclick="'submitForm('+${c.code}+',this)'"
+                                    class="btn btn-success" type="button">保存
+                            </button>
+                            <!--<button onclick="submitForm(this)" class="btn btn-success" type="button">保存并提交审核</button>-->
+                            <!--<button onclick="submitForm(this)" class="btn btn-success" type="button">回收</button>-->
                         </p>
 
                     </div>
